retrieveUnpackaged/objects/Reviewer_Rating__c.object
<CustomObject>
    <fields>
        <fullName>Dropped_Comments__c</fullName>
        <label>Dropped Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dropped_Reason__c</fullName>
        <label>Dropped Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Excused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Excused</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dropped__c</fullName>
        <label>Dropped</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Panel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Panel</label>
        <referenceTo>Paneling__c</referenceTo>
        <relationshipLabel>Reviewer Ratings</relationshipLabel>
        <relationshipName>Reviewer_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Rating__c</fullName>
        <inlineHelpText>0-2.6 = F
2.7-3.4 = C
3.5-4.2 = B
4.3-5.0 = A</inlineHelpText>
        <label>Performance Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reviewer_Name__c</fullName>
        <label>Reviewer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reviewer Ratings</relationshipLabel>
        <relationshipName>Reviewer_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Panel Co-Ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert Reviewer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Reviewer Rating</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reviewer Rating</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviewer Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>